--- a/stableser/Makefile
+++ b/stableser/Makefile
@@ -1,6 +1,6 @@
 CC		= gcc
 OTHER_CFLAGS	= 
-CFLAGS		= -march=native -Ofast -funroll-loops -flto $(OTHER_CFLAGS) -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -D_GNU_SOURCE -I. -Wall -Wno-unused-variable -std=gnu99 -o
+CFLAGS		= -march=native -Ofast -funroll-loops -flto $(OTHER_CFLAGS) -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -D_GNU_SOURCE -I. -Wall -Wno-unused-variable -std=gnu99 -lpthread -o
 BIN		= stableser.o ss_parser.o ss_worker.o ss_processor.o ss_error.o ss_hash.o
 
 .PHONY: all clean install uninstall
